Subdomains should be hidden by default to prevent flickering

--- a/cilantro/static/scss/define.scss
+++ b/cilantro/static/scss/define.scss
@@ -116,6 +116,7 @@
 
     @include box-shadow(inset 0 2px 3px darken($bgcolor, 20));
 
+    display: none;
     height: 14px;
     padding: 5px;
     font-size: 0.9em;
